# ssidd

./: Cargo.toml  LICENSE
docs/: Design.md
src/: api.rs  lib.rs  machine.rs  settings.rs
src/backend/: mod.rs
