[package]
name = "ssidd"
version = "0.1.0"
edition = "2021"
authors = ["poscat <poscat@poscat.moe>"]

license = "BSD-3"
keywords = ["package-manager"]
categories = ["command-line-utilities"]

[dependencies]
tokio = "1.40"
futures = "0.3"
ksni = "0.2"
zbus_systemd = "0.25600"
zbus = "4.4"
tracing = "0.1"
tracing-journald = "0.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ssidd"
path = "app/daemon.rs"

[[bin]]
name = "ssidc"
path = "app/client.rs"
